--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -44,7 +44,7 @@
                     <button id="prev-month" class="nav-button">
                         <i class="bi bi-arrow-left-short"></i>
                     </button>
-                    <span id="current-month" class="month-text">Outubro 2024</span>
+                    <span id="current-month" class="month-text"></span>
                     <button id="next-month" class="nav-button">
                         <i class="bi bi-arrow-right-short"></i>
                     </button>
